# lore-forger

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  main.py
backend/app/ai/: client.py  logic.py  sse.py
backend/app/api/: router.py  schemas.py
backend/app/api/routes/: __init__.py  presentations.py  sessions.py
backend/app/core/: config.py  templates.py  utils.py
backend/app/db/: firestore.py  presentations.py
backend/app/services/: __init__.py  ai_service.py  presentation_service.py  session_service.py
backend/app/templates/: presentation.html
backend/app/web/: presentation_store.py  presentations.py
frontend/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css
frontend/src/lib/components/: GrimoireConsole.svelte  WorldStateSidebar.svelte
frontend/src/routes/: +page.svelte
tests/: test_ai_logic.py  test_presentation_routes.py
