[project]
name = "lore-forger"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "google-cloud-firestore>=2.23.0",
    "google-genai>=1.65.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.41.0",
]
